en/9.0/admin/scheduledJob-guide.rst
============
Job settings
============

This page is generated by Machine Translation from Japanese.

Overview
========

Here are settings for the job.

How to set up
=============

How to display
--------------

In Administrator account after logging in, click the job management.

|image0|

|image1|

Setting item
============

The name
--------

It is the name that appears in the list.

Target
------

You can use as an identifier for whether or not to run when the target
job command to run directly in the batch, etc.. If the crawl command
execution, do not specify 'all'.

Schedule
--------

Configure schedule settings. Run jobs written in script on a schedule
you set here.

Description format describes the format such as Cron seconds minutes
date month day year (optional)". For example, "0 0 12? \* WED ' for if
the weekly Wednesday 12:00 pm job to run. About how to specify the finer
"`Quartz <http://quartz-scheduler.org/documentation/quartz-2.2.x/tutorials/tutorial-lesson-06>`__\ "Please
see.

How to run
----------

Specifies the script execution environment. At the moment supports only
the 'groovy'.

Script
------

Written in the language specified in how to perform job run.

Log
---

To enable records to the job log.

Crawling jobs
-------------

In turn treated as crawl jobs. In establishing the system crawl started
and stopped.

State
-----

Specifies the enabled or disabled status of the job. If the job will not
run.

Sort
----

Specifies the display order in the job list.

.. |image0| image:: ../../../resources/images/en/9.0/admin/scheduledJob-1.png
.. |image1| image:: ../../../resources/images/en/9.0/admin/scheduledJob-2.png
